--- a/popup.html
+++ b/popup.html
@@ -107,6 +107,10 @@
 	</div>
 	<input type="submit" value="筛选" id="sb"><br>
 	</div>
+	<br><a id="getkey">推送key</a>：
+	<input type="password" id="key">
+	<input type="button" value="设置" id="setkey">
+	<br><input type="button" value="检查更新" id="checkupdate"><br>
 	<script src="popup.js"></script>
 </body>
 
