--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,10 @@
 		<option value="jwxt">jwxt.jnu.edu.cn</option>
 		<option value="172">202.116.0.172:8083</option>
 	</select>
+	<select id="sites2" style="display:none;">
+		<option value="1">方案一</option>
+		<option value="2">方案二</option>
+	</select>
 	<input type="button" value="切换" id="setO"><br>
 	<input type="button" name="fast_login" value="快速登录" id="enter_login">
 	<input type="button" name="fast_index" value="进入首页" id="enter_index">
