修正‘高级英语课程群’为‘高级外语课程群’。

--- a/popup.html
+++ b/popup.html
@@ -100,8 +100,8 @@
 	<label for="sl">数学理工类</label><br>
 	<input type="checkbox" name="class[]" value="生命科学类" id="sk">
 	<label for="sk">生命科学类</label><br>
-	<input type="checkbox" name="class[]" value="高级英语课程群" id="gy">
-	<label for="gy">高级英语课程群</label><br>
+	<input type="checkbox" name="class[]" value="高级外语课程群" id="gy">
+	<label for="gy">高级外语课程群</label><br>
 	<input type="checkbox" name="class[]" value="计算机高级课程群" id="jsj">
 	<label for="jsj">计算机高级课程群</label><br>
 	<input type="checkbox" name="class[]" value="体育竞技与休闲运动课程群" id="ty">
